test/classes/vass/duplicate-virtual-method-error-2.good
duplicate-virtual-method-error-2.chpl:2: error: ambiguous virtual method 'D.dup()'
duplicate-virtual-method-error-2.chpl:2: note: conflicting with: D.dup()
